# 43Fa

./: .env  .env.edge.example  .env.example  .env.hybrid.example  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.deploy.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_connector_framework.py
backend/app/: bootstrap_users.py  collector.py  config.py  main.py  seed.py  worker.py
backend/app/api/dependencies/: auth.py
backend/app/api/routers/: analytics.py  auth.py  ingest.py
backend/app/api/schemas/: common.py
backend/app/application/: dtos.py  predictive_engine.py  use_cases.py
backend/app/domain/: entities.py  services.py
backend/app/infrastructure/connectors/: __init__.py  base.py  mssql_connector.py
backend/app/infrastructure/db/: models.py  session.py
backend/app/infrastructure/logging/: logger.py
backend/app/infrastructure/metrics/: prometheus.py
backend/app/infrastructure/repositories/: analytics_repository.py  ingest_repository.py
backend/app/infrastructure/security/: auth.py
backend/sample_data/: sample_shift_a.csv  sample_shift_b.csv
backend/tests/: conftest.py  test_api.py  test_domain.py  test_mssql_connector.py
deploy/nginx/: shadowplant.conf
deploy/prometheus/: prometheus.yml
deploy/tls/: generate-self-signed.sh
deploy/tls/certs/: server.crt  server.key
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.prod  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
(+15 files in other folders)
