[project]
name = "shadowplant-ai-backend"
version = "0.1.0"
description = "ShadowPlant AI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "numpy>=2.0.1",
  "prometheus-client>=0.20.0",
  "slowapi>=0.1.9",
  "structlog>=24.4.0"
]

[project.optional-dependencies]
mssql = [
  "pyodbc>=5.1.0"
]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0",
  "ruff>=0.5.5",
  "black>=24.4.2",
  "mypy>=1.11.0"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "sample_data*", "tests*"]
